--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -5,6 +5,8 @@ RUN apt update -y && apt upgrade -y && useradd -m docker
 RUN apt install -y --no-install-recommends \
     curl jq build-essential libssl-dev libffi-dev python3 python3-venv \
     python3-dev python3-pip
+COPY docker_install.sh .
+RUN ./docker_install.sh
 RUN cd /home/docker && mkdir actions-runner && cd actions-runner \
 && curl -O -L https://github.com/actions/runner/releases/download/v${RUNNER_VERSION}/actions-runner-linux-x64-${RUNNER_VERSION}.tar.gz \
 && tar xzf ./actions-runner-linux-x64-${RUNNER_VERSION}.tar.gz
